--- a/Moblin Screen Recording/Localizable.xcstrings
+++ b/Moblin Screen Recording/Localizable.xcstrings
@@ -41,6 +41,12 @@
             "value" : "Host fehlt"
           }
         },
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "HOST non trovato"
+          }
+        },
         "ru" : {
           "stringUnit" : {
             "state" : "translated",
@@ -50,7 +56,14 @@
       }
     },
     "Malformed IRL URL" : {
-
+      "localizations" : {
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "URL IRL non valido"
+          }
+        }
+      }
     },
     "Malformed IRLToolkit URL" : {
       "localizations" : {
@@ -58,6 +71,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Fehlerhafte IRLToolkit URL"
+          }
+        },
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "URL RLToolkit non valido"
           }
         },
         "ru" : {
@@ -76,6 +95,12 @@
             "value" : "Fehlerhafte RIST URL"
           }
         },
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "URL RIST non valido"
+          }
+        },
         "ru" : {
           "stringUnit" : {
             "state" : "translated",
@@ -90,6 +115,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Fehlerhafte RTMP URL"
+          }
+        },
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "URL RTMP non valido"
           }
         },
         "ru" : {
@@ -108,6 +139,12 @@
             "value" : "Fehlerhafte SRT(LA) URL"
           }
         },
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "URL SRT(LA) non valido"
+          }
+        },
         "ru" : {
           "stringUnit" : {
             "state" : "translated",
@@ -122,6 +159,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Fehlerhafte URL"
+          }
+        },
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "URL non valido"
           }
         },
         "ru" : {
@@ -140,6 +183,12 @@
             "value" : "RIST-Port Nummer fehlt"
           }
         },
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Numero di porta RIST non trovato"
+          }
+        },
         "ru" : {
           "stringUnit" : {
             "state" : "translated",
@@ -156,6 +205,12 @@
             "value" : "RTMP Stream Name fehlt"
           }
         },
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Nome flusso RTMP non trovato"
+          }
+        },
         "ru" : {
           "stringUnit" : {
             "state" : "translated",
@@ -170,6 +225,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Fehlendes Schema"
+          }
+        },
+        "it" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Schema non trovato"
           }
         },
         "ru" : {
