--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -6859,6 +6859,9 @@
         }
       }
     },
+    "%lld°" : {
+
+    },
     "%llu" : {
       "localizations" : {
         "de" : {
@@ -82408,6 +82411,9 @@
           }
         }
       }
+    },
+    "Rotation" : {
+
     },
     "Rounded" : {
       "localizations" : {
