Workout test suggestion.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -115622,6 +115622,9 @@
         }
       }
     },
+    "Workout test" : {
+
+    },
     "ws://213.33.45.132:4567" : {
       "localizations" : {
         "de" : {
