--- a/Moblin Screen Recording/Localizable.xcstrings
+++ b/Moblin Screen Recording/Localizable.xcstrings
@@ -57,6 +57,12 @@
     },
     "Malformed IRL URL" : {
       "localizations" : {
+        "de" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Fehlerhafte IRL URL"
+          }
+        },
         "it" : {
           "stringUnit" : {
             "state" : "translated",
