Experiment with wind noise removal.

--- a/Common/Localizable.xcstrings
+++ b/Common/Localizable.xcstrings
@@ -80516,6 +80516,9 @@
         }
       }
     },
+    "Remove wind noise" : {
+
+    },
     "Repeat" : {
       "localizations" : {
         "de" : {
